--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,25 @@
+# Byte-compiled / optimized / DLL files
 __pycache__/
-.venv/
+*.py[cod]
+*.pyo
+*.pyd
 
+# Virtual environment
+.venv/
+venv/
+ENV/
+env/
+
+# Environment variables
 .env
+
+# IDE / editor settings
+.vscode/
+.idea/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
